[package]
name = "my-todo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
dotenvy = "0.15.7"
http-body = "1.0.1"
hyper = { version = "1.4.1", features = ["full"] }
mime = "0.3.17"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
sqlx = { version = "0.8.1", features = ["runtime-tokio-rustls", "any", "postgres"] }
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["full"] }
tower = { version = "0.5.0", features = ["util"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
validator = { version = "0.18.1", features = ["derive"] }
